[package]
name = "rxqlite"
version = "0.2.0"
readme = "README.md"

edition = "2021"
authors = [
    "ha421 <hha835773@gmail.com>",
]
categories = ["distributed", "database", "raft" , "sqlite" ]
description = "A distributed sqlite database built upon `openraft` and `sqlite`."
homepage = "https://github.com/HaHa421/raft-sqlite"
keywords = ["distributed", "sqlite"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HaHa421/raft-sqlite"

[workspace]
members = [
  "crates/rxqlite-common",
  "crates/rxqlite-sqlx-common",
  "crates/sqlx-rxqlite"
]

[[bin]]
name = "rxqlited"
path = "bin/main.rs"

[[example]]
name = "rxqlite-client"
path = "examples/client.rs"

[dependencies]
anyhow = "*"
rxqlite-common = { version = "0.1" , path = "crates/rxqlite-common" }
rxqlite-sqlx-common = { version = "0.1" , path = "crates/rxqlite-sqlx-common" , features = [ "sqlite" ] }
openraft = { version = "0.10", git = "https://github.com/datafuselabs/openraft/openraft" , features = ["serde"] }



tokio = { version = "1.35.1", features = ["full"] }
byteorder = "1.4.3"
clap = { version = "4.1.11", features = ["derive", "env"] }
reqwest = { version = "0.11.9", default-features=false , features = ["json"] }
rocksdb = "0.22"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
warp = "0.3"
# for toy-rpc, use `serde_json` instead of the default `serde_bincode`:
# bincode which enabled by default by toy-rpc, does not support `#[serde(flatten)]`: https://docs.rs/bincode/2.0.0-rc.3/bincode/serde/index.html#known-issues
toy-rpc = { version = "0.8.6", features = [
  "ws_tokio",
  "server",
  "client",
  "tokio_runtime",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls" , "chrono" , "sqlite"]

[dependencies.sqlx-core]
version = "0.7"


[dev-dependencies]
maplit = "1.0.2"
tempfile = { version = "3.4.0" }



[features]

[package.metadata.docs.rs]
all-features = true
