[package]
name = "rxqlite-common"
version = "0.1.0"


edition = "2021"
authors = [
    "drdr xp <drdr.xp@gmail.com>",
    "Pedro Paulo de Amorim <pepa.amorim@gmail.com>",
    "The Tremor Team",
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An example distributed key-value store built upon `openraft`."
homepage = "https://github.com/datafuselabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/datafuselabs/openraft"


[dependencies]
serde = { version = "1" , features = [ "derive" ] }
chrono = { version = "0.4" , features = [ "serde" ] }
