[package]
name = "rxqlite-common"
version = "0.1.1"


edition = "2021"
authors = [
    "ha421 <hha835773@gmail.com>"
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "A distributed sqlite database built upon `openraft` ,`sqlx` and `sqlite`."
homepage = "https://github.com/HaHa421/rxqlite"
keywords = ["raft", "consensus","sqlite"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HaHa421/rxqlite"


[dependencies]
serde = { version = "1" , features = [ "derive" ] }
chrono = { version = "0.4" , features = [ "serde" ] }
