[package]
name = "rxqlite-sqlx-common"
version = "0.1.0"
readme = "README.md"

edition = "2021"
authors = [
    "ha421 <hha835773@gmail.com>"
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An example distributed key-value store built upon `openraft`."
homepage = "https://github.com/datafuselabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/datafuselabs/openraft"


[dependencies]
rxqlite-common = { version = "0.1" , path = "../rxqlite-common" }
sqlparser=  "0.44"

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls" , "chrono"]

[dependencies.sqlx-core]
version = "0.7"

[features]
default = [ "sqlite" ]
sqlite = [ "sqlx/sqlite" ]

[dev-dependencies]
maplit = "1.0.2"
tempfile = { version = "3.4.0" }

[package.metadata.docs.rs]
all-features = true
