[package]
name = "rxqlite-sqlx-common"
version = "0.1.3"

edition = "2021"
authors = [
    "ha421 <hha835773@gmail.com>"
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "A distributed sqlite database built upon `openraft` ,`sqlx` and `sqlite`."
homepage = "https://github.com/HaHa421/rxqlite"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HaHa421/rxqlite"


[dependencies]
rxqlite-common = { version = "0.1.2" , path = "../rxqlite-common" }
sqlparser=  "0.44"
anyhow = "1"

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls" , "chrono" ]

[dependencies.sqlx-sqlite-cipher]
version = "0.7"
#path = "../../../sqlx-sqlite-cipher"


[dependencies.sqlx-core]
version = "0.7"

[features]
default = [ "sqlite" ]
sqlite = [ "sqlx/sqlite" ]

[dev-dependencies]
maplit = "1.0.2"
tempfile = { version = "3.4.0" }

[package.metadata.docs.rs]
all-features = true
