[package]
name = "rxqlite-tests-common"
version = "0.1.6"


edition = "2021"
authors = [
    "ha421 <hha835773@gmail.com>"
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "A distributed sqlite database built upon `openraft` ,`sqlx` and `sqlite`."
homepage = "https://github.com/HaHa421/rxqlite"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HaHa421/rxqlite"


[dependencies]
anyhow = "1"
rxqlite-common = { version = "0.1.2" }
rcgen="0.12"
state = { version = "0.6" , features = [ "tls" ]}

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0" , features = [ "signal" ] }


